# PCT

./: CMakeLists.txt  README.md  buildPCT.sh  commonheader.h  config.properties  main.cpp  utils.h
cmake-build/Testing/inputData/: Geolife_days1_DS0.csv
index/intervaltree/: Interval.cpp  Interval.h  ItreeIndex.cpp  ItreeIndex.h  ItreeNode.cpp  ItreeNode.h
index/rtree/: RtreeElement.h  RtreeIndex.cpp  RtreeIndex.h  RtreeNode.cpp  RtreeNode.h
io/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  LogFile.cpp  LogFile.h  Parameters.cpp  Parameters.h
privacy/: NoiseGenerator.cpp  NoiseGenerator.h  Perturbation.cpp  Perturbation.h
spatial/: Category.cpp  Category.h  GeoPoint.cpp  GeoPoint.h  IndexPoint.cpp  IndexPoint.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  StaticGrid.cpp  StaticGrid.h  Trip.cpp  Trip.h
tracing/: MultiHopContactSearch.h  SearchByIndex.cpp  SearchByIndex.h  functions.h  integral.h
